# goryachkovskaya_coursework_tp

./: .gitignore  CMakeLists.txt  main.cpp
doxygen_docs/rtf/: refman.rtf  ~$refman.rtf
mylib/: CMakeLists.txt  Doxyfile  lib.cpp
mylib/include/lib/: lib.h
test_files/: lzw_comp.txt  lzw_decomp.txt  rle_comp.txt  rle_comp_test.txt  rle_decomp.txt
